[tool.poetry]
authors = ["Joel Collins <joel.collins@renalregistry.nhs.uk>"]
description = "SQLAlchemy models for the UKRDC"
name = "ukrdc-sqla"
readme = "README.md"
version = "1.10.0"

[tool.poetry.dependencies]
SQLAlchemy = "^1.4.25"
python = ">=3.6.2,<4.0"

[tool.poetry.dev-dependencies]
black = {version = "^21.10b0", allow-prereleases = true}
isort = "^5.8.0"
pylint = "^2.11.1"
tox = "^3.24.4"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.black]
exclude = '(\.eggs|\.git|\.venv|\.tox)'

[tool.isort]
ensure_newline_before_comments = true
force_grid_wrap = 0
include_trailing_comma = true
line_length = 88
multi_line_output = 3
use_parentheses = true

[tool.pylint.'MESSAGES CONTROL']
disable = "too-few-public-methods, missing-module-docstring, missing-class-docstring, duplicate-code, line-too-long"
max-line-length = 88
