[tool.poetry]
authors = ["Joel Collins <joel.collins@renalregistry.nhs.uk>"]
description = "SQLAlchemy models for the UKRDC"
name = "ukrdc-sqla"
readme = "README.md"

version = "3.0.3"

[tool.poetry.dependencies]
SQLAlchemy = ">=1.4.25,<3.0.0"
python = ">=3.8.0,<4.0"

[tool.poetry.group.dev.dependencies]
isort = "^5.8.0"
pytest = ">=7.1.3,<9.0.0"
ruff = ">=0.4.2,<0.15.0"
tox = "^4.15.0"
tox-gh-actions = "<4.2.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.black]
exclude = '(\.eggs|\.git|\.venv|\.tox)'
line-length = 160

[tool.isort]
ensure_newline_before_comments = true
force_grid_wrap = 0
include_trailing_comma = true
line_length = 160
multi_line_output = 3
use_parentheses = true

[tool.pylint.'MESSAGES CONTROL']
disable = "too-many-lines, too-few-public-methods, missing-module-docstring, missing-class-docstring, duplicate-code, line-too-long"
max-line-length = 160
